<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/send_activity_linear_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textview_category"
        android:textSize="28sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_best_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_best_picture" />

        <RadioButton
            android:id="@+id/radio_best_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_best_actor" />

        <RadioButton
            android:id="@+id/radio_best_actress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_best_actress" />

        <RadioButton
            android:id="@+id/radio_film_editing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_film_editing" />

        <RadioButton
            android:id="@+id/radio_visual_effects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_visual_effects" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textview_nominee"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/edittext_send_nominee"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@color/edit_text_nominee_background_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textview_review"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/edittext_send_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/edit_text_review_background_color"
        android:layout_margin="20dp"
        android:height="100dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/main_button_submit"
        android:textSize="16sp"
        android:layout_margin="5sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_send_data"/>

</LinearLayout>
